clean up & comments